fix: disable Qt6.7's dark mode and force Fusion style no matter what

--- a/src/stylesheets/qt-lingoes-blue.css
+++ b/src/stylesheets/qt-lingoes-blue.css
@@ -1,4 +1,6 @@
-MainWindow {
+MainWindow,
+QToolBar
+{
   background-color: #cfddf0;
 }
 
